# fsap

./: .gitignore  README.md  TODO.txt  fsap_org.txt  point.py  prog_struct.txt  run_tests_from_here.txt  section_property.py  setup.cfg  setup.py
experiments/: ch1_p3d4.ipynb
fsap/: model.py  output.py  references.txt  ri.py  rse.py
fsap/anen/: element.py  joint.py  model.py  support.py
fsap/geom/: joint.py  line.py  point.py
fsap/input/: input_file_doc.txt  ri.py  sample_input_file.txt
fsap/matl/: material_property.py
fsap/section_property/: section_property.py
fsap/sepr/: section_property.py
fsap/test/: input_file_doc.txt  line_test.py  pt_test.py  sample_input_file.txt  sample_input_file2.txt  section_property_test.py  sp_test.py  sp_test2.py  test.py  test_input_file.txt
fsap/utils/: line.py  point.py
src/fsap/: fe_processor.py  fsap.py  point.py  postprocessor.py  preprocessor.py  pwusr.py  read_input.py  rect_mesh_gen.py  section_property.py
test/: bar221i_ex1.txt  bar221i_ex1_opt.txt  bar221i_ex1_out.txt  bar221i_ex2.txt  bar221i_ex2_out.txt  bar221i_ex3.txt  direct_input_docs.txt  inp.txt  model_test.py  pt_test.py  quad244i_ex1.txt  sp_test.py  test_all.py  test_ri.py  test_single.py  tri231i_ex1.txt  tri231i_ex1_out.txt  tri231i_patch_plane_strain_disp.txt  tri231i_patch_plane_strain_disp_out.txt  tri231i_patch_plane_strain_load.txt  tri231i_patch_plane_strain_load_out.txt  tri231i_patch_plane_stress_disp.txt  tri231i_patch_plane_stress_disp_out.txt  tri231i_patch_plane_stress_load.txt  tri231i_patch_plane_stress_load_out.txt
