[metadata]
name=fsap
version=0.1
author=MLW
description=3D Finite Element Analysis 
long_description = file: README.md
long_description_content_type = text/markdown
url=https://github.com/mwhit74/fsap
project_urls=
    Bug Tracker =  https://github.com/fsap/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    numpy
    matplotlib
python_requires =  >=3.6


[options.packages.find]
where = src
